# Product-Manual-Bot

./: .gitignore  Dockerfile  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test_and_build.yml
src/app/: main.py
src/app/api/: dependencies.py
src/app/api/v1/: chat.py  ingestion.py
src/app/core/: config.py  events.py
src/app/schemas/: chat.py  document.py
src/app/services/: ingestion_service.py  rag_service.py  vector_service.py
src/ui/: app.py
src/ui/components/: chat_interface.py  source_citations.py
tests/: conftest.py
tests/integration/: test_api.py  test_rag_flow.py
tests/unit/: test_ingestion_service.py  test_rag_service.py  test_services.py  test_splitter.py  test_vector_service.py
