[tool.poetry]
name = "product-manual-bot"
version = "0.1.0"
description = "AI-driven Product Manual Bot with RAG using FastAPI, Groq, and Neon DB"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}, {include = "ui", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
streamlit = "^1.31.0"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.4"
pydantic = {extras = ["settings"], version = "^2.5.3"}
pypdf2 = "^3.0.1"
pdfplumber = "^0.10.3"
python-multipart = "^0.0.6"
httpx = "^0.26.0"
sse-starlette = "^1.8.2"
tiktoken = "^0.5.2"
sentence-transformers = "^2.3.0"
pydantic-settings = "^2.12.0"
langchain = "^1.1.0"
langchain-community = "^0.3.0"
langchain-groq = "^1.1.1"
langchain-text-splitters = "^1.1.0"
langchain-huggingface = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
ruff = "^0.1.11"
black = "^24.1.1"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app", "ui"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
